gcc/testsuite/algol68/compile/error-supper-4.a68
{ dg-options {-fstropping=supper} }

begin int foo bar = 10; { dg-error "" }
      skip
end
